# omniclicker

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  PKGBUILD  README.md  io.github.omniclicker.yml  omniclicker.install
data/: io.github.omniclicker.desktop  io.github.omniclicker.metainfo.xml
flatpak/: README.md
src/: ClickEngine.cpp  Config.cpp  Config.h  MainWindow.cpp  MainWindow.h  Types.cpp  Types.h  main.cpp
src/backends/: BackendFactory.cpp  UInputBackend.cpp  UInputBackend.h
src/hotkeys/: EvdevHotkeyBackend.cpp  EvdevHotkeyBackend.h  GnomeHotkeyBackend.cpp  GnomeHotkeyBackend.h  Hotkey.cpp  HotkeyBackend.h  HotkeyBackendFactory.cpp  HotkeyCaptureEdit.h  HotkeyManager.cpp  HotkeyManager.h  HyprlandHotkeyBackend.cpp  HyprlandHotkeyBackend.h  KdeGlobalAccelBackend.cpp  KdeGlobalAccelBackend.h  PortalHotkeyBackend.cpp  PortalHotkeyBackend.h  SwayHotkeyBackend.cpp  SwayHotkeyBackend.h  X11HotkeyBackend.cpp  X11HotkeyBackend.h
src/omniclicker-1.0.0/: .gitignore  CMakeLists.txt  README.md
src/omniclicker-1.0.0/data/: io.github.omniclicker.metainfo.xml
src/omniclicker-1.0.0/src/: ClickEngine.cpp  ClickEngine.h  Config.cpp  Config.h  MainWindow.h  main.cpp
src/omniclicker-1.0.0/src/backends/: InputBackend.h  X11Backend.cpp  X11Backend.h
src/omniclicker-1.0.0/src/hotkeys/: EvdevHotkeyBackend.cpp  EvdevHotkeyBackend.h  GnomeHotkeyBackend.cpp  Hotkey.h  HotkeyBackendFactory.cpp  HotkeyCaptureEdit.cpp  HotkeyManager.h  KdeGlobalAccelBackend.h  PortalHotkeyBackend.cpp  PortalHotkeyBackend.h  SwayHotkeyBackend.h
